--- a/vhiop908.css
+++ b/vhiop908.css
@@ -70,13 +70,14 @@ body {
     width:40px; 
     text-align: center;
     margin-top:34px;
+    cursor: pointer;
 }
-a:hover{
+/*a:hover{
     color:aqua;
     cursor: pointer;
     font-size: 41px;
     width:41px;
-}
+}*/
 
 .carouselBackground{
     background: linear-gradient(to left,black,indigo,white,indigo,black);
