--- a/vhiop908MiddleSection.css
+++ b/vhiop908MiddleSection.css
@@ -46,3 +46,14 @@ body{
     padding-bottom: 100%;
     margin-bottom: -100%;
 }*/
+
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: rgb(18, 163, 189);
+    color: white;
+    text-align: center;
+ }
+ 
