--- a/vhiop908.css
+++ b/vhiop908.css
@@ -28,7 +28,7 @@ body {
 .carousel__cell {
   position: absolute;
   width: 290px;
-  height: 120px;
+  height: 150px;
   left: 10px;
   top: 30px;
   border: 2px solid black;
@@ -37,6 +37,7 @@ body {
   font-weight: bold;
   color: white;
   text-align: center;
+  border-radius: 10px
 }
 
 
@@ -69,7 +70,7 @@ body {
     border: 1px  solid black;
     width:40px; 
     text-align: center;
-    margin-top:34px;
+    margin-top:78px;
     cursor: pointer;
 }
 /*a:hover{
@@ -80,9 +81,9 @@ body {
 }*/
 
 .carouselBackground{
-    background: linear-gradient(to left,black,indigo,white,indigo,black);
+    background: linear-gradient(to left,black,indigo,indigo,black);
     width:100%;
-    height: 250px;
+    height: 300px;
     margin-top:0;
     position: relative;
     top:auto;
