--- a/vhiop908AudioEffect.css
+++ b/vhiop908AudioEffect.css
@@ -4,7 +4,7 @@
     padding: 10px;
     border-radius: 10px;
     /*background-color: #eee;*/
-    background: linear-gradient(to left,#eee,indigo,white,indigo,#eee);
+    background: whitesmoke;
     color: #444;
     margin: 0px auto;
     overflow: hidden;
