--- a/vhiop908Footer.css
+++ b/vhiop908Footer.css
@@ -3,7 +3,7 @@
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color:#eee;/* rgb(18, 163, 189);*/
+    background-color:#eaeaea;/* rgb(18, 163, 189);*/
     color: black;
     text-align: center;
  }
