--- a/vhiop908Sidebars.css
+++ b/vhiop908Sidebars.css
@@ -15,7 +15,7 @@ body{
     padding-bottom: 100%;
     margin-bottom: -100%;
     overflow: auto;
-    /*border: 1px solid black;*/
+    border: 10px solid white;
     position: relative;
 }
 .image{
